--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "eslint-config-next": "13.0.1",
     "next": "13.0.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.6.0",
+    "typewriter-effect": "^2.19.0"
   }
 }
