--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@rumess/react-flip-countdown": "^1.2.6",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.1",
+    "flipdown": "^0.3.2",
     "next": "13.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
