--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
+    "react-simply-carousel": "^8.4.1",
+    "react-slick": "^0.29.0",
     "react-top-loading-bar": "^2.3.1",
     "typewriter-effect": "^2.19.0"
   }
