--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint-config-next": "13.0.1",
     "firebase": "^9.14.0",
     "flipdown": "^0.3.2",
+    "flowbite": "^1.5.4",
     "next": "13.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -21,6 +22,7 @@
     "react-simply-carousel": "^8.4.1",
     "react-slick": "^0.29.0",
     "react-top-loading-bar": "^2.3.1",
+    "swiper": "^8.4.5",
     "typewriter-effect": "^2.19.0"
   }
 }
