--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-# key Id : "rzp_test_ISBhYH27KC1gVA";
+# Key ID : "rzp_test_S3i8j9v7DYV32M"
+# Secreat Key: "NM4QyVHMz8ADlFSNam2BDe8E"
+
+RAZORPAY_KEY=rzp_test_S3i8j9v7DYV32M
+RAZORPAY_SECRET=NM4QyVHMz8ADlFSNam2BDe8E
