--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "flipdown": "^0.3.2",
     "flowbite": "^1.5.4",
     "next": "13.0.1",
+    "razorpay": "^2.8.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
     "react-simply-carousel": "^8.4.1",
     "react-slick": "^0.29.0",
     "react-top-loading-bar": "^2.3.1",
+    "shortid": "^2.2.16",
     "swiper": "^8.4.5",
     "typewriter-effect": "^2.19.0"
   }
